setActiveNav function in custom.js is now Much simpler, cleaner and more efficient. Works across local dev amd live sites now.

--- a/ie8.html
+++ b/ie8.html
@@ -1,19 +1,5 @@
-<?php
-/**
- * The Header for our theme.
- *
- * Displays all of the <head> section and everything up till <div id="main">
- *
- * @package _tk
- */
-?><!DOCTYPE html>
-<!--[if lt IE 7]>  <html class="ie ie6 lte9 lte8 lte7"> <![endif]-->
-<!--[if IE 7]>     <html class="ie ie7 lte9 lte8 lte7"> <![endif]-->
-<!--[if IE 8]>     <html class="ie ie8 lte9 lte8"> <![endif]-->
-<!--[if IE 9]>     <html class="ie ie9 lte9"> <![endif]-->
-<!--[if gt IE 9]>  <html> <![endif]-->
-<!--[if IE]><meta http-equiv="refresh" content="0;URL=/ie8.html"><![endif]-->
-<!--[if !IE]><!--> <html <?php language_attributes(); ?>>	<!--<![endif]-->  
+<!DOCTYPE html>
+<html>
 <head profile="http://www.w3.org/2005/10/profile">
 <link rel="icon" 
       type="image/png" 
@@ -34,9 +20,8 @@
 </head>
 
 <body <?php body_class(); ?>>
-	<?php do_action( 'before' ); ?>
-	
-<div class="root">
+		
+	</body>
+</html>
 
-
-
+hi there, get a new browser dummy.
